--- a/experiments.tex
+++ b/experiments.tex
@@ -2,7 +2,7 @@
 
 \section{Experimental Evaluation}\label{sec:experiments}
 %\MS{List the specifications of the cluster machine/laptop with which we have run our experiments.}
-We evaluate a prototype implementation of ALg.~\ref{alg:abcd-with-time-for-tracking}
+We evaluate a prototype implementation of ALg.~\ref{alg:main}
 on two examples. 
 The design of nominal controller has been performed on a laptop with core i7-4510u CPU at 3.10GHz, with 8GB of
 RAM.
