--- a/preamble.tex
+++ b/preamble.tex
@@ -21,6 +21,7 @@
 \newtheorem{problem}{Problem}
 
 % comment macros
+\newcommand{\Sadegh}[1]{{\color{magenta} \textbf{SS:} #1}}
 \newcommand{\KM}[1]{{\color{red} \textbf{KM:} #1}}
 \newcommand{\MS}[1]{{\color{blue} \textbf{MS:} #1}}
 \newcommand{\MZ}[1]{{\color{green} \textbf{MZ:} #1}}
