some figures added

--- a/controllers.tex
+++ b/controllers.tex
@@ -28,6 +28,33 @@ The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ i
 Let $\set{\Sigma^i} $ be a set of control systems, $\tau >0$ be a given sampling time, $\set{\Sigma^i} $ be the respective sampled-time abstractions, $\Sigma^\times$ be the product control system of $\set{\Sigma^i} $, and $\Sigma^\times_\tau$ be the product sampled time abstraction of $\set{\Sigma^i} $.
 A \emph{global} open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
 On the other hand, a set of \emph{local} open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$.
+\newpage
+\subsection{Temporary Figures}
+
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/Abs+syn_box_plot.eps}
+	\caption{Box plot for Local ABCD (Abstraction+ synthesis time)}
+	\label{fig:Temp1}
+\end{figure}
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/Abs_box_plot.eps}
+	\caption{Box plot for Local ABCD (Abstraction time)}
+	\label{fig:Temp2}
+\end{figure}
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/Abs_and_syn_box_plot.eps}
+	\caption{Box plot for Local ABCD (Abstraction and synthesis time)}
+	\label{fig:Temp3}
+\end{figure}
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/Algorithm_outline.pdf}
+	\caption{Algorithm Outline}
+	\label{fig:Temp4}
+\end{figure}
 
 %\smallskip
 %\noindent\textbf{Decentralized Control.}\
