temporary figures are modified

--- a/controllers.tex
+++ b/controllers.tex
@@ -33,19 +33,19 @@ On the other hand, a set of \emph{local} open-loop (feedback) controllers of $\s
 
  \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/Abs+syn_box_plot.eps}
+	\includegraphics[width=0.45\textwidth]{figures/box1.eps}
 	\caption{Box plot for Local ABCD (Abstraction+ synthesis time)}
 	\label{fig:Temp1}
 \end{figure}
  \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/Abs_box_plot.eps}
+	\includegraphics[width=0.45\textwidth]{figures/box2.eps}
 	\caption{Box plot for Local ABCD (Abstraction time)}
 	\label{fig:Temp2}
 \end{figure}
  \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/Abs_and_syn_box_plot.eps}
+	\includegraphics[width=0.45\textwidth]{figures/box3.eps}
 	\caption{Box plot for Local ABCD (Abstraction and synthesis time)}
 	\label{fig:Temp3}
 \end{figure}
