--- a/problem.tex
+++ b/problem.tex
@@ -1,29 +1,44 @@
-%! TEX ROOT = ./main.tex
+% !TEX root = main.tex
 
 \section{Multi-Agent Reach-Avoid Controller Synthesis}
 \label{sec:problem}
 
 \subsection{Problem Statement}
 %\textcolor{blue}{
-In this paper, we consider the feedback controller synthesis problem for a heterogeneous swarm of $N$ different control systems.
-Each system is modeled as a nonlinear control systems subjected to disturbances. We consider \emph{reach-avoid} specifications denoted as $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ with some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$. Now, let $\varepsilon\in \mathbb{R}^n_{>0}$ be a \emph{robustness margin}. We define a robust version of a given reach-avoid specification by $\Phi_\varepsilon=\lnot\avoid'\;\mathcal{U}\;\goal'$ with $\avoid'=\avoid'\oplus\ball_\varepsilon(0)$ and $\goal'=\goal\ominus\ball_\varepsilon(0)$, where $\oplus$ and $\ominus$ denote the Minkowski addition and diffrence, respectively. %Given a sampled-time abstraction product control system $\Sigma^\times_\tau$ and reach-avoid specification $\Phi$ defined over $X^\times$, we will say that decentralized open-
+In this paper, we consider the feedback controller synthesis problem for a heterogeneous swarm of $N$ different control systems $\set{\Sigma^i}_{i\in [1;N]}$.
+Each system is modeled as a nonlinear control systems affected by disturbances. We consider \emph{reach-avoid} specifications denoted as $\Phi=(\lnot\avoid\,\mathcal{U}\,\goal)$ with some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}$.
+Let $\varepsilon\in \mathbb{R}^n_{>0}$ be a \emph{robustness margin}. We define a robust version of $\Phi$ by $\Phi_\varepsilon:=(\lnot\avoid'\,\mathcal{U}\,\goal')$ with $\avoid'=\avoid'\oplus\ball_\varepsilon(0)$ and $\goal'=\goal\ominus\ball_\varepsilon(0)$, where $\oplus$ and $\ominus$ are set operators denoting the Minkowski addition and difference, respectively. %Given a sampled-time abstraction product control system $\Sigma^\times_\tau$ and reach-avoid specification $\Phi$ defined over $X^\times$, we will say that decentralized open-
 %loop (decentralized closed-loop) realizes $\Phi$ if every trajectory of $C\colon [0;T]\to U$ ($C\parallel\Sigma_\tau$) satisfies $\Phi$.
 
-We want to synthesize \emph{local} feedback controllers for each agent so that a global reach-avoid specification, defined on the state space of the product control system, is fulfilled under the worst-case disturbance.
-Concretely, we want to develop an algorithm with the following input and output:
-\begin{description}
-	\item[Inputs:] A set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$ and a reach-avoid specification $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$.% for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
-	\item[Parameters:] A robustness margin $\varepsilon\in \reals^n_{>0}$.%, state space discretization parameter $\eta_x\in\reals^n$ and input space discretization parameter $\eta_u\in\reals^m$.
-	\item[Output:] A set of local feedback controllers $\set{C^i}_{i\in [1;N]}$ of $\set{\Sigma^i}_{i\in [1;N]}$ so that $\set{C^i}_{i\in [1;N]}\parallel \set{\Sigma^i}_{i\in [1;N]}$ realizes $\Phi$. 
-\end{description}
+Our goal is to synthesize \emph{local} feedback controllers for each control system so that the global specification $\Phi$, defined on the state space of the product system, is fulfilled for any allowed disturbance affecting these systems.
 
-It is important to notice that any solution for this problem must provide a formal guarantee: the reach-avoid specification $\Phi$ must be satisfied under the worst-case disturbance affecting the product system.
+\begin{resp}
+\begin{problem}
+\label{problem}
+Develop an algorithm with the following inputs and outputs:
+
+\noindent\textbf{Inputs:} Control systems $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, $i\in [1;N]$, and the global specification $\Phi=\lnot\avoid\,\mathcal{U}\,\goal$.
+
+\noindent\textbf{Parameters:} A robustness margin $\varepsilon\in \reals^n_{>0}$.
+
+\noindent\textbf{Outputs:} Local feedback controllers $\set{C^i}$ for $\set{\Sigma^i}$, $i\in [1;N]$, such that $\set{C^i}\parallel \set{\Sigma^i}$ realizes $\Phi$. 
+\end{problem}
+\end{resp}
+
+\begin{comment}
+\begin{description}
+	\item[Inputs:] Control systems $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, $i\in [1;N]$, and the global specification $\Phi=\lnot\avoid\,\mathcal{U}\,\goal$.% for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
+	\item[Parameters:] A robustness margin $\varepsilon\in \reals^n_{>0}$.%, state space discretization parameter $\eta_x\in\reals^n$ and input space discretization parameter $\eta_u\in\reals^m$.
+	\item[Output:] Local feedback controllers $\set{C^i}$ for $\set{\Sigma^i}$, $i\in [1;N]$, such that $\set{C^i}\parallel \set{\Sigma^i}$ realizes $\Phi$. 
+\end{description}
+\end{comment}
+
+It is important to notice that any solution for this problem is required to provide a formal guarantee on the satisfaction of $\Phi$, i.e., the reach-avoid specification $\Phi$ must be satisfied under any disturbance affecting the control systems.
 
 Our choice of the specification $\Phi$ on the product state space $X^\times$ subsumes many interesting class of control tasks.
-For example, we can express situations when the robots have their own local reach-avoid specifications, and they need to avoid collision among each other; we consider such specification in some of our examples in Sec.~\ref{sec:local reach-avoid}.
-In addition, we can now also specify more general type of tasks which cannot be easily decomposed into individual subtasks for the robots.
-One example is the formation control problem, which we consider in the example in Sec.~\ref{sec:global formation control}, where a set of robots need to reach some location while maintaining a given geometric formation:
-Since the formation is defined using the relative positions of the robots, hence we cannot decompose this task into separate reach-avoid subtasks.
+For example, we can express situations when the robots have their own local reach-avoid specifications, and they need to avoid collision among each other; we consider such a specification in our examples in Sec.~\ref{sec:local reach-avoid}.
+In addition, we can also specify more general tasks which cannot be easily decomposed into individual subtasks for the robots.
+One example is the \emph{formation control problem}, which we consider in the example in Sec.~\ref{sec:global formation control}, where a set of robots need to reach some location while maintaining a given geometric formation. Since the formation is defined using the relative positions of the robots, it is not possible to decompose this task into separate local reach-avoid subtasks.
 
 %The robustness margin $\varepsilon$ accounts for the possible tracking error of the ABCD-generated controller in Step~\ref{step:abcd} while tracking the nominal trajectory.
 %Because ALTRO ignores the disturbances, hence a positive tracking error is inevitable.
